<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pahlawan.DetailActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">
        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/desc_foto_pahlawan"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_nama1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/txt_nama1"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_detail" />

        <TextView
            android:id="@+id/tv_usia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_usia"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_nama1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_nama1"
            app:layout_constraintTop_toTopOf="@+id/tv_nama1" />

        <TextView
            android:id="@+id/tv_nama2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_nama2"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@id/tv_nama1"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_kategori"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_kategori"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@id/tv_nama2"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_asal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_asal"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@id/tv_kategori"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_lahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_lahir"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@id/tv_asal"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_gugur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_gugur"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@id/tv_lahir"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_lokasi_makam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_lokasi_makam"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@id/tv_gugur"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_detail"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_lokasi_makam"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_history"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            android:justificationMode="inter_word"
            android:letterSpacing="0.02"
            android:lineSpacingExtra="5dp"
            app:layout_constraintTop_toBottomOf="@id/detail"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>