<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="16dp"
    android:padding="16dp">

    <Button
        android:id="@+id/btn_rv_json"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_json"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_rv_list_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_display_list_user_from_api_github"
        app:layout_constraintTop_toBottomOf="@id/btn_rv_json" />

    <Button
        android:id="@+id/btn_rv_search_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_display_user_from_search_api_github"
        app:layout_constraintTop_toBottomOf="@id/btn_rv_list_user" />

    <Button
        android:id="@+id/btn_rv_repo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_display_repositories_git_from_search_api"
        app:layout_constraintTop_toBottomOf="@id/btn_rv_search_user" />
</androidx.constraintlayout.widget.ConstraintLayout>